--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "fbjs": "^3.0.5",
+    "lottie-react-native": "^7.0.0",
     "nanoid": "^5.0.7",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-asset": "^2.1.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-share": "^11.0.3",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2"
