--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.73.6",
     "react-native-asset": "^2.1.1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.20.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-share": "^11.0.3",
